made extensive layout changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel=stylesheet href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Playfair+Display|Noto+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
       <link rel="stylesheet" href="mainSite.css" media="screen" charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
       <script>
@@ -22,8 +22,26 @@
    </head>
    <body>
       <div class=container>
-         <div class="well well-sm">
-            <h1>Tony Lanera CSM PMP</h1>
+         <div class="well">
+            <div class="row"> 
+                <div class="col-md-6 col-xs-12">
+                   <div class="heading">
+                       <h1>Tony Lanera CSM</h1>
+                       <h2>Full Stack JavaScript Developer</h2>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <ul class="social-links">
+                        <li><a href="https://www.linkedin.com/in/tonylanera">
+                            <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="auto" height="30" alt="View Tony Lanera LinkedIn profile" style="vertical-align:middle;" border="0"></a></li>
+                        <li><a class="glyphicon glyphicon-envelope glyphicon-size" href="mailto:Tony@TonyLanera.com"></a></li>
+                        <li><a class="glyphicon glyphicon-phone glyphicon-size" href="tel:206-930-0758"></a></li>
+                        <li><a href="https://github.com/alkitony">
+                            <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" width="auto" height="30" alt="View Tony Lanera Github profile"></a></li>
+                        <li><a class="glyphicon glyphicon-file glyphicon-size" href="/resume/TonyLaneraCSMResume.pdf"></a></li>
+                    </ul>
+                </div>
+            </div>
             <h3>Client Focus, Collaborative, Efficient</h3>
             <div>
                <p>
@@ -32,72 +50,66 @@
                   His continual focus and ultimate end-goal of providing exceptional customer 
                   satisfaction while striving for efficiencies is a main objective of his career.
                </p>
-               <div class="social-links row">
-                  <p>
-                     <a href="https://www.linkedin.com/in/tonylanera">
-                        <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="auto" height="30" alt="View Tony Lanera LinkedIn profile" style="vertical-align:middle;" border="0"></a>
-                     <a class="glyphicon glyphicon-envelope glyphicon-size" href="mailto:Tony@TonyLanera.com"></a>
-                     <a class="glyphicon glyphicon-phone glyphicon-size" href="tel:206-930-0758"></a>
-                     <a href="https://github.com/alkitony">
-                        <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" width="auto" height="30" alt="View Tony Lanera Github profile"></a>
-                  </p>
-               </div>
-               <hr />
-               <p>
-                  The subsites and code examples below were developed as part of the 
-                  <a href="https://www.udemy.com/the-web-developer-bootcamp/">Udemy: The Web Developer Bootcamp</a> course. 
-                  A demo, github code repository and ReadMe file is available for each example.
-                  This site and subsite are built on the AWS platform: Route53 for Domain Management, 
-                  EC2 and S3 for Computing and Cloud Storgage. AWS Beanstalk is used to manage and deploy the entire environment. 
-                  The Yelp Camp site uses SES for emailing password reset.   
-               </p>
             </div>
          </div>
-         
-         <div class="row text-center gridsys">
-            <div class="thumbnail col-md-4 col-xs-12">
-                <h4>Yelp Camp</h4>
-                <hr>
-                <p>
-                   This is a full stack application built on Node.js, Express and MongoDB. 
-                   Responsive nature and styling is done with Bootstrap. This site allows for user generating content with comments.
-                   A security is in place to prevent changing of content. 
-                </p>
-                <div class="move-bottom-size">
-                   <a href=/yelpcamp>Demo</a>
-                </div>
-                <div class="move-bottom-size move-right">
-                   <a href=https://github.com/alkitony/keyBoardPlay>Code</a>
-                </div>
-            </div>
-            <div class="thumbnail col-md-4 col-xs-12">
-                <h4>The Color Game</h4>
-                <hr>
-                <p>
-                   This is my first site developing with HTML5, CSS3 and JavaScript. 
-                   The goal of this exercise is to gain understanding and practice utilizing the DOM and Javascript.
-                </p>
-                <div class="move-bottom-size">
-                   <a href=/thecolorgame>Demo</a>
-                </div>
-                <div class="move-bottom-size move-right">
-                   <a href=https://github.com/alkitony/theColorGame>Code</a>
-                </div>
-            </div>
-            <div class="thumbnail col-md-4 col-xs-12">
-                <h4>Key Board Play Site</h4>
-                <hr>
-                <p>
-                   The KeyBoardPlay site is a variation of the <a href=http://patatap.com>patatap.com</a> site. This site uses paperjs for graphics and animation and howler.js for sound play.
-                   Press any keys between "a" through "z" to display a circle in a random location and play a corresponding sound.
-                </p>
-                <div class="move-bottom-size">
-                   <a class="pull-left" href=/keyboardplay>Demo</a>
-                </div>
-                <div class="move-bottom-size move-right">
-                   <a class="pull-right" href=https://github.com/alkitony/keyBoardPlay>Code</a>
-                </div>
-            </div>
+      </div>
+      
+      <div class=container>
+         <div class='well well-sm'>
+              <h1>Coding Examples</h1>
+              <p class="deep-bottom-space">
+                 The subsites and code examples below were developed as part of the 
+                 <a href="https://www.udemy.com/the-web-developer-bootcamp/">Udemy: The Web Developer Bootcamp</a> course. 
+                 A demo, github code repository and ReadMe file is available for each example.
+                 This site and subsite are built on the AWS platform: Route53 for Domain Management, 
+                 EC2 for Computing. The Yelp Camp site uses SES for emailing password reset.   
+              </p>
+              <div class="row text-center gridsys">
+                 <div class="thumbnail col-md-4 col-xs-12 yelpcamp">
+                     <h4>Yelp Camp</h4>
+                     <hr>
+                     <p>
+                        This is a full stack application built on Node.js, Express and MongoDB. 
+                        Responsive nature and styling is done with Bootstrap. This site allows for user to create a login and generate content
+                        with comments.
+                     </p>
+                     <div class="move-bottom-size">
+                        <a href=/yelpcamp>Demo</a>
+                     </div>
+                     <div class="move-bottom-size move-right">
+                        <a href=https://github.com/alkitony/keyBoardPlay>Code</a>
+                     </div>
+                 </div>
+                 <div class="thumbnail col-md-4 col-xs-12 colorgame">
+                     <h4>The Color Game</h4>
+                     <hr>
+                     <p>
+                        This is my first site developing with HTML5, CSS3 and JavaScript. 
+                        The goal of this exercise is to gain understanding and practice utilizing the DOM and Javascript.
+                     </p>
+                     <div class="move-bottom-size">
+                        <a href=/thecolorgame>Demo</a>
+                     </div>
+                     <div class="move-bottom-size move-right">
+                        <a href=https://github.com/alkitony/theColorGame>Code</a>
+                     </div>
+                 </div>
+                 <div class="thumbnail col-md-4 col-xs-12 keyboardplay">
+                     <h4>Key Board Play Site</h4>
+                     <hr>
+                     <p>
+                        The KeyBoardPlay site displays circles in random location and plays a corresponding sound when pressing any key between "a" through "z".
+                        This sites uses paperjs for graphics and animation and howler.js for sound play. 
+                        This site is a variation of the <a href=http://patatap.com>patatap.com</a>.
+                     </p>
+                     <div class="move-bottom-size">
+                        <a class="pull-left" href=/keyboardplay>Demo</a>
+                     </div>
+                     <div class="move-bottom-size move-right">
+                        <a class="pull-right" href=https://github.com/alkitony/keyBoardPlay>Code</a>
+                     </div>
+                 </div>
+              </div>
          </div>
       </div>
    </body>
