fix and update links, new resume, and changed various description

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <ul class="social-links">
-                        <li><a href="https://www.linkedin.com/in/tonylanera">
+                        <li><a href="https://www.linkedin.com/in/tonylanera" target="_blank">
                             <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="auto" height="30" alt="View Tony Lanera LinkedIn profile" style="vertical-align:middle;" border="0"></a></li>
                         <li><a class="glyphicon glyphicon-envelope glyphicon-size" href="mailto:Tony@TonyLanera.com"></a></li>
                         <li><a class="glyphicon glyphicon-phone glyphicon-size" href="tel:206-930-0758"></a></li>
-                        <li><a href="https://github.com/alkitony">
+                        <li><a href="https://github.com/alkitony" target="_blank">
                             <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" width="auto" height="30" alt="View Tony Lanera Github profile"></a></li>
                         <li><a class="glyphicon glyphicon-file glyphicon-size" href="/resume/TonyLaneraCSMResume.pdf"></a></li>
                     </ul>
                 </div>
             </div>
-            <h3>Client Focus, Collaborative, Efficient</h3>
+            <h3>Client Focus, Collaborative, Process Improvements</h3>
             <div>
                <p>
-                  Tony is a full stack web developer with Project Management and QA experience in Information Technology. 
+                  Tony is a full stack JavaScript developer with Project Management and QA experience in Information Technology. 
                   He is highly innovative and able to quickly understand complex systems and unique technologies. 
                   His continual focus and ultimate end-goal of providing exceptional customer 
                   satisfaction while striving for efficiencies is a main objective of his career.
@@ -59,7 +59,7 @@
               <h1>Coding Examples</h1>
               <p class="deep-bottom-space">
                  The subsites and code examples below were developed as part of the 
-                 <a href="https://www.udemy.com/the-web-developer-bootcamp/">Udemy: The Web Developer Bootcamp</a> course. 
+                 <a href="https://www.udemy.com/the-web-developer-bootcamp/" target="_blank">Udemy: The Web Developer Bootcamp</a> course. 
                  A demo, github code repository and ReadMe file is available for each example.
                  This site and subsite are built on the AWS platform: Route53 for Domain Management, 
                  EC2 for Computing. The Yelp Camp site uses SES for emailing password reset.   
@@ -69,15 +69,15 @@
                      <h4>Yelp Camp</h4>
                      <hr>
                      <p>
-                        This is a full stack application built on Node.js, Express and MongoDB. 
-                        Responsive nature and styling is done with Bootstrap. This site allows for user to create a login and generate content
+                        This is a full stack application built on Node.js, Express and MongoDB. RESTful Routing has been implemented by using Method-Override. 
+                        Responsive nature and styling is done with BootstrapJS. This site allows for user to create a login and generate content
                         with comments.
                      </p>
                      <div class="move-bottom-size">
                         <a href=/yelpcamp>Demo</a>
                      </div>
                      <div class="move-bottom-size move-right">
-                        <a href=https://github.com/alkitony/keyBoardPlay>Code</a>
+                        <a href="https://github.com/alkitony/yelpcamp" target="_blank">Code</a>
                      </div>
                  </div>
                  <div class="thumbnail col-md-4 col-xs-12 colorgame">
@@ -91,7 +91,7 @@
                         <a href=/thecolorgame>Demo</a>
                      </div>
                      <div class="move-bottom-size move-right">
-                        <a href=https://github.com/alkitony/theColorGame>Code</a>
+                        <a href="https://github.com/alkitony/theColorGame" target="_blank">Code</a>
                      </div>
                  </div>
                  <div class="thumbnail col-md-4 col-xs-12 keyboardplay">
@@ -100,13 +100,13 @@
                      <p>
                         The KeyBoardPlay site displays circles in random location and plays a corresponding sound when pressing any key between "a" through "z".
                         This sites uses paperjs for graphics and animation and howler.js for sound play. 
-                        This site is a variation of the <a href=http://patatap.com>patatap.com</a>.
+                        This site is a variation of the <a href="http://patatap.com" target="_blank">patatap.com</a>.
                      </p>
                      <div class="move-bottom-size">
                         <a class="pull-left" href=/keyboardplay>Demo</a>
                      </div>
                      <div class="move-bottom-size move-right">
-                        <a class="pull-right" href=https://github.com/alkitony/keyBoardPlay>Code</a>
+                        <a class="pull-right" href="https://github.com/alkitony/keyBoardPlay" target="_blank">Code</a>
                      </div>
                  </div>
               </div>
