Add footer, favicon, updated copy, added a new resume

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>Tony Lanera</title>
       <link rel=stylesheet href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+      <link rel=icon href="img/favicon.ico">
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
@@ -21,7 +22,7 @@
       </script>
    </head>
    <body>
-      <div class=container>
+      <div class="container">
          <div class="well">
             <div class="row"> 
                 <div class="col-md-6 col-xs-12">
@@ -45,16 +46,15 @@
             <h3>Client Focus, Collaborative, Process Improvements</h3>
             <div>
                <p>
-                  Tony is a full stack JavaScript developer with Project Management and QA experience in Information Technology. 
-                  He is highly innovative and able to quickly understand complex systems and unique technologies. 
-                  His continual focus and ultimate end-goal of providing exceptional customer 
-                  satisfaction while striving for efficiencies is a main objective of his career.
+                  I am a full stack JavaScript developer with Project Management and QA experience in Information Technology. 
+                  I am looking for an innovative and collaborative environment that focuses on creative solutions.
+                  Providing exceptional customer satisfaction while striving for efficiencies is a main objective of my career.
                </p>
             </div>
          </div>
       </div>
       
-      <div class=container>
+      <div class="container">
          <div class='well well-sm'>
               <h1>Coding Examples</h1>
               <p class="deep-bottom-space">
@@ -113,4 +113,7 @@
          </div>
       </div>
    </body>
+   <footer>
+            <p>&copy 2016 Created by Tony Lanera</p>
+   </footer>
 </html>
