Minor content updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-md-6 col-xs-12">
                    <div class="heading">
                        <h1>Tony Lanera CSM</h1>
-                       <h2>Full Stack JavaScript Developer</h2>
+                       <h2>Front End JavaScript Developer</h2>
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-12">
@@ -46,9 +46,7 @@
             <h3>Client Focus, Collaborative, Process Improvements</h3>
             <div>
                <p>
-                  I am a full stack JavaScript developer with Project Management and QA experience in Information Technology. 
-                  I am looking for an innovative and collaborative environment that focuses on creative solutions.
-                  Providing exceptional customer satisfaction while striving for efficiencies is a main objective of my career.
+                  I am a Front End JavaScript developer with Project Management and QA experience. I thrive in an innovative and collaborative environment that focuses on creative solutions. Providing exceptional customer satisfaction and striving for process improvement is a main objective of my career.
                </p>
             </div>
          </div>
