Minor changed to main page and resume

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-md-6 col-xs-12">
                    <div class="heading">
                        <h1>Tony Lanera CSM</h1>
-                       <h2>Full Stack JavaScript Developer</h2>
+                       <h2>Front End JavaScript Developer</h2>
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-12">
@@ -46,9 +46,7 @@
             <h3>Client Focus, Collaborative, Process Improvements</h3>
             <div>
                <p>
-                  I am a full stack JavaScript developer with Project Management and QA experience in Information Technology. 
-                  I am looking for an innovative and collaborative environment that focuses on creative solutions.
-                  Providing exceptional customer satisfaction while striving for efficiencies is a main objective of my career.
+                  I am a Front End JavaScript developer with Project Management. I thrive in an innovative and collaborative environment that focuses on creative solutions. Providing exceptional customer satisfaction and striving for process improvement is a main objective of my career.
                </p>
             </div>
          </div>
@@ -84,7 +82,7 @@
                      <h4>The Color Game</h4>
                      <hr>
                      <p>
-                        This is my first site developing with HTML5, CSS3 and JavaScript. 
+                        This is my first site developed with HTML5, CSS3 and JavaScript. 
                         The goal of this exercise is to gain understanding and practice utilizing the DOM and Javascript.
                      </p>
                      <div class="move-bottom-size">
