--- a/index.html
+++ b/index.html
@@ -63,13 +63,27 @@
                  EC2 for Computing. The Yelp Camp site uses SES for emailing password reset.   
               </p>
               <div class="row text-center gridsys">
-                 <div class="thumbnail col-md-4 col-xs-12 yelpcamp">
+                 <div class="thumbnail col-md-3 col-xs-12 colorgame">
+                     <h4>Memory Game (React</h4>
+                     <hr>
+                     <p>
+                        Built in React. Utilizing an object to store the various card colors.
+                        The app includes a custom built array shuffle algorithm, 
+                        which allows for randomly assigning a color to each card.
+                     </p>
+                     <div class="move-bottom-size">
+                        <a href=/memorygame>Demo</a>
+                     </div>
+                     <div class="move-bottom-size move-right">
+                        <a href="https://github.com/alkitony/react-memory-game" target="_blank">Code</a>
+                     </div>
+                 </div>
+                 <div class="thumbnail col-md-3 col-xs-12 yelpcamp">
                      <h4>Yelp Camp</h4>
                      <hr>
                      <p>
-                        This is a full stack application built on Node.js, Express and MongoDB. RESTful Routing has been implemented by using Method-Override. 
-                        Responsive nature and styling is done with BootstrapJS. This site allows for user to create a login and generate content
-                        with comments.
+                        A full stack application built on Node.js, Express and MongoDB. RESTful Routing was implemented using Method-Override. 
+                        Responsive styling is done with BootstrapJS. The site allows user generated content and comments.
                      </p>
                      <div class="move-bottom-size">
                         <a href=/yelpcamp>Demo</a>
@@ -78,7 +92,7 @@
                         <a href="https://github.com/alkitony/yelpcamp" target="_blank">Code</a>
                      </div>
                  </div>
-                 <div class="thumbnail col-md-4 col-xs-12 colorgame">
+                 <div class="thumbnail col-md-3 col-xs-12 colorgame">
                      <h4>The Color Game</h4>
                      <hr>
                      <p>
@@ -92,13 +106,13 @@
                         <a href="https://github.com/alkitony/theColorGame" target="_blank">Code</a>
                      </div>
                  </div>
-                 <div class="thumbnail col-md-4 col-xs-12 keyboardplay">
+                 <div class="thumbnail col-md-3 col-xs-12 keyboardplay">
                      <h4>Key Board Play Site</h4>
                      <hr>
                      <p>
-                        The KeyBoardPlay site displays circles in random location and plays a corresponding sound when pressing any key between "a" through "z".
-                        This sites uses paperjs for graphics and animation and howler.js for sound play. 
-                        This site is a variation of the <a href="http://patatap.com" target="_blank">patatap.com</a>.
+                        KeyBoardPlay site displays circles in random location and plays a corresponding sound when pressing a key between "a" to "z".
+                        Libaries used are paperjs for graphics and animation and howler.js for sound play. 
+                        The site is based on <a href="http://patatap.com" target="_blank">patatap.com</a>.
                      </p>
                      <div class="move-bottom-size">
                         <a class="pull-left" href=/keyboardplay>Demo</a>
