fixed memoryGame title update copyright date

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </p>
               <div class="row text-center gridsys">
                  <div class="thumbnail col-md-3 col-xs-12 colorgame">
-                     <h4>Memory Game (React</h4>
+                     <h4>Memory Game (React)</h4>
                      <hr>
                      <p>
                         Built in React. Utilizing an object to store the various card colors.
@@ -126,6 +126,6 @@
       </div>
    </body>
    <footer>
-            <p>&copy 2016 Created by Tony Lanera</p>
+            <p>&copy 2018 Created by Tony Lanera</p>
    </footer>
 </html>
